syntax = "proto3";

package grpc_server;

// The tradfri service definition
service TradfriService {
  rpc ListGroups (ListGroupsRequest) returns (ListGroupsResponse) {}
  rpc GetGroup (GetGroupRequest) returns (GetGroupResponse) {}

  rpc ListDevices (ListDevicesRequest) returns (ListDevicesResponse) {}
  rpc ListDeviceIDs (ListDeviceIDsRequest) returns (ListDeviceIDsResponse) {}

  rpc GetDevice (GetDeviceRequest) returns (GetDeviceResponse) {}
  rpc ChangeDevicePositioning (ChangeDevicePositioningRequest) returns (ChangeDevicePositioningResponse) {}
}

message DeviceMetadata {
  int32 id = 1;
  string name = 2;
  string vendor = 3;
  string type = 4;
  int32  bat = 10;
}

message Device{
  DeviceMetadata metadata = 1;
  float position = 2;
}

message Group{
  int32 id = 1;
  string created = 3;
  repeated int32 devices = 4;
}

message ListGroupsRequest{}

message ListGroupsResponse{
  repeated Group groups = 1;
}

message GetGroupRequest{
  int32 id = 1;
}

message GetGroupResponse{
  Group group = 1;
}

message ListDevicesRequest{
  int32 group_id = 1;
}

message ListDevicesResponse{
  repeated Device devices = 1;
}

message ListDeviceIDsRequest{
  int32 group_id = 1;
}

message ListDeviceIDsResponse{
  repeated int32 ids = 1;
}

message GetDeviceRequest{
  int32 id = 1;
}

message GetDeviceResponse{
  Device device = 1;
}

message ChangeDevicePositioningRequest{
  int32 id = 1;
  int32 value = 2;
}

message ChangeDevicePositioningResponse{}
